# cdp-rs

./: .clippy.toml  .gitignore  ARCHITECTURE.md  CDP_ORACLE_SETUP.md  CDP_SOURCE_MAP.md  CI_TEST.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_WORKFLOW.md  FROZEN_MODULES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  LESSONS_LEARNED.md  LICENSE  MODULE_STATUS.md  Makefile  NEXT_MODULES.md  QUICK_CONTEXT.md  README.md  rustfmt.toml
.github/: CDP_CI_STRATEGY.md
.github/workflows/: cdp-oracle.yml  claude.yml  rust-oracle.yml  validation.yml
cdp-core/benches/: fft.rs
cdp-core/src/: constants.rs  errors.rs  fft.rs  lib.rs  window.rs
cdp-examples/: Cargo.toml
cdp-examples/src/: oracle_demo.rs
cdp-housekeep/: Cargo.toml
cdp-housekeep/examples/: channel_extract.rs  generate_samples.rs
cdp-housekeep/src/: lib.rs  wav_cdp.rs
cdp-modify/: Cargo.toml
cdp-modify/examples/: batch_normalize.rs
cdp-modify/src/: lib.rs  loudness.rs
cdp-oracle/: Cargo.toml
cdp-oracle-demos/: Cargo.toml  README.md
cdp-oracle-demos/src/: oracle_demo.rs
cdp-oracle/src/: audio.rs  generator.rs  lib.rs  validator.rs
cdp-pvoc/src/: lib.rs
cdp-sandbox/: Cargo.toml
cdp-sandbox/examples/: audio_processing.rs  batch_normalize.rs  channel_extract.rs  generate_samples.rs
cdp-sandbox/src/: experiments.rs  lib.rs
cdp-sandbox/src/housekeep/: chans.rs  copy.rs  mod.rs  wav_cdp.rs
cdp-sandbox/src/modify/: loudness.rs  mod.rs
cdp-sandbox/src/sndinfo/: mod.rs  props.rs
cdp-sndinfo/: Cargo.toml
cdp-sndinfo/src/: lib.rs  props.rs
cdp-spectral/src/: lib.rs
crates/cdp-core/: Cargo.toml
crates/cdp-core/src/: constants.rs  fft.rs  window.rs
crates/cdp-distort/: Cargo.toml  README.md
crates/cdp-distort/examples/: bass_enhancement.rs  distortion_showcase.rs  guitar_effects.rs  vocal_processing.rs
crates/cdp-distort/src/: divide.rs  error.rs  lib.rs  multiply.rs  overload.rs
crates/cdp-distort/tests/: distort_tests.rs  oracle_tests.rs
crates/cdp-housekeep/: Cargo.toml
crates/cdp-housekeep/examples/: channel_extract.rs  generate_samples.rs
crates/cdp-housekeep/src/: chans.rs  copy.rs
crates/cdp-housekeep/tests/: oracle_tests.rs
crates/cdp-modify/examples/: audio_processing.rs
crates/cdp-oracle/src/: lib.rs  test_utils.rs  wav_compare.rs
crates/cdp-pvoc/: Cargo.toml
crates/cdp-pvoc/examples/: spectral_analysis.rs  spectral_effects.rs
crates/cdp-pvoc/src/: lib.rs
crates/cdp-pvoc/tests/: cli_tests.rs  format_tests.rs  oracle_tests.rs
crates/cdp-sandbox/src/: experiments.rs
crates/cdp-spectral/: Cargo.toml
crates/cdp-spectral/examples/: blur_variations.rs  pitch_shifting.rs  spectral_blur.rs  stretch_variations.rs  time_stretch.rs
crates/cdp-spectral/src/: ana_io.rs  blur.rs  error.rs  lib.rs  pitch.rs  stretch.rs
crates/cdp-spectral/tests/: blur_tests.rs  oracle_tests.rs  oracle_tests.rs.bak  pitch_tests.rs  stretch_tests.rs
scripts/: build-cdp.sh  cdp-demo.sh  check-frozen.sh  ci-oracle-test.sh  generate-stereo-test.py  generate-test-audio.py  install-cdp.sh  mark-tests.sh  oracle-compare.py  test-cdp-ci.sh  test-cdp.sh  test-oracle-housekeep.sh  toggle-module.sh
scripts/patches/: cdp-cmake.patch
test-output/: maxsamp.txt  sndinfo.txt
tests/: integration_test.rs
