[workspace]
resolver = "2"
members = [
    "cdp-core",
    "cdp-pvoc", 
    "cdp-spectral",
    "cdp-oracle",
    "cdp-sandbox",
    "cdp-examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CDP-RS Contributors"]
license = "LGPL-2.1"
repository = "https://github.com/yourusername/cdp-rs"

[workspace.dependencies]
# Core dependencies
rustfft = "6.2"
hound = "3.5"
ndarray = "0.15"
num-complex = "0.4"
num-traits = "0.2"
thiserror = "1.0"
anyhow = "1.0"

# Testing
approx = "0.5"
proptest = "1.4"
criterion = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"