[package]
name = "cdp-oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdp-core = { path = "../cdp-core" }
hound = { workspace = true }
ndarray = { workspace = true }
num-complex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.10"
which = "6.0"

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }