[package]
name = "cdp-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdp-core = { path = "../cdp-core" }
cdp-oracle = { path = "../cdp-oracle" }
anyhow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }