[package]
name = "cdp-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdp-core = { path = "../cdp-core" }
cdp-oracle = { path = "../cdp-oracle" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tempfile = "3.8"

[dev-dependencies]
criterion = { workspace = true }