[package]
name = "cdp-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdp-core = { path = "../cdp-core" }
cdp-housekeep = { path = "../cdp-housekeep" }
cdp-modify = { path = "../cdp-modify" }
cdp-sndinfo = { path = "../cdp-sndinfo" }
cdp-oracle = { path = "../cdp-oracle" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tempfile = "3.8"

[dev-dependencies]
criterion = { workspace = true }