[package]
name = "cdp-housekeep"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
cdp-oracle = { path = "../cdp-oracle" }
hound = { workspace = true }
tempfile = "3.20"
