[package]
name = "cdp-pvoc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cdp-core = { path = "../cdp-core" }
cdp-housekeep = { path = "../cdp-housekeep" }
rustfft = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "pvoc"
path = "src/bin/pvoc.rs"

[dev-dependencies]
cdp-oracle = { path = "../cdp-oracle" }
tempfile = "3.20"
approx = { workspace = true }
serial_test = "3.0"