[package]
name = "cdp-spectral"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdp-core = { path = "../cdp-core" }
cdp-pvoc = { path = "../cdp-pvoc" }
num-complex = { workspace = true }

[dev-dependencies]
cdp-oracle = { path = "../cdp-oracle" }