[package]
name = "cdp-spectral"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdp-core = { path = "../cdp-core" }
cdp-pvoc = { path = "../cdp-pvoc" }
num-complex = { workspace = true }
hound = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cdp-oracle = { path = "../cdp-oracle" }
tempfile = { workspace = true }

[[bin]]
name = "blur"
path = "src/bin/blur.rs"

[[bin]]
name = "stretch"
path = "src/bin/stretch.rs"

[[bin]]
name = "pitch"
path = "src/bin/pitch.rs"